@startuml
rectangle {
    together {
        class ItemClass {
            +name: String
            +description: String
        }
        class Attribute {
            +name: String
        }
        abstract class AttributeType
        class ScalarType
        class DictionaryType
        class DictionaryItem {
            +value: String
        }
        class UnitOfMeasurement {
            +name: String
            +code: String
        }
    }
}

ItemClass ---> UnitOfMeasurement: amountUnit
AttributeType <|-- ScalarType
AttributeType <|-- DictionaryType
ScalarType o-- "1" UnitOfMeasurement: unit
DictionaryType *-- "*" DictionaryItem: items
Attribute o-- "1" AttributeType: type
ItemClass o-- "*" Attribute: attributes

rectangle {
    together {
        class Item
        abstract class Value
        class ScalarValue {
            value: BigDecimal
        }
        class DictionaryValue {
            value: String
        }
    }
}

Value <|-- ScalarValue
Value <|-- DictionaryValue
Item "*" --> "1" ItemClass
Value "*" --* "1" Item: valuation
Value "*" --> "1" Attribute: of


@enduml